# techman_robot_ros

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
docker/: docker-compose.yaml
docker/melodic-base/: Dockerfile
docker/melodic_other/: Dockerfile
docker/techman_vnc/: Dockerfile_tm
tm700_moveit_config/: .setup_assistant  package.xml
tm700_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml  tm700.srdf
tm700_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
tm_api_msgs/: CMakeLists.txt  package.xml
tm_api_msgs/msg/: robot_status.msg
tm_api_msgs/srv/: delete_point.srv  get_record.srv  move_to_record.srv  record.srv  start_work.srv
tm_grasp_description/: CMakeLists.txt  package.xml
tm_grasp_description/urdf/: hand.urdf.xacro  tm700_hand.urdf.xacro  tm700_robot_joint_limited_eih_hand.urdf.xacro
tm_move_api/: CMakeLists.txt  package.xml
tm_move_api/include/: robot_move_interface.h  ros_move.h  tm_move_api.h  tm_move_api_connector.h  utility.h
tm_move_api/service/: tm_move_api_connector.cpp  tm_move_cpp_service.cpp
tm_move_api/src/: move.cpp  ros_move.cpp  tm_move_api.cpp
tm_move_api/test/: ros_move_stub.cpp  ros_move_stub.h  test_move_api.cpp
tm_move_python/: CMakeLists.txt  package.xml  setup.py  test_client_scrip.py
tm_move_python/scrips/: tm_move.py  tm_move_api_python.py  utilites.py
