<?xml version="1.0"?>
<package format="2">
  <name>tm_move_api</name>
  <version>0.0.0</version>
  <description>The tm_move_api package</description>


  <maintainer email="leowu102000@gmail.com">Jufeng Wu(leo Wu)</maintainer>


  <license>Apache Licence 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
